@@ -185,6 +185,8 @@ Library
 Extension Modules
 -----------------
 
+- Issue #11241: subclasses of ctypes.Array can now be subclassed.
+
 - Issue #9651: Fix a crash when ctypes.create_string_buffer(0) was passed to
   some functions like file.write().
 
